Prevent too narrow columns in the Blocks panel.

--- a/assets/_styles.scss
+++ b/assets/_styles.scss
@@ -626,10 +626,14 @@ body.admin-color-light #wp-admin-bar-query-monitor:not(.qm-all-clear):not(:hover
 		}
 
 		td.qm-row-block-attrs,
+		td.qm-row-block-context,
 		td.qm-row-block-html {
 			max-width: 40em !important;
 		}
 
+		td.qm-row-block-attrs,
+		td.qm-row-block-context,
+		td.qm-row-block-html,
 		tr.qm-warn td.qm-col-status,
 		td.qm-url,
 		th.qm-col-message,
